# iASL-MAGPie-2025

./: .gitignore  .gitmodules
.docker_utils/: main_dock.sh
script/: build_workspace.sh  init_submodules.sh  launch_base.sh  launch_mapping.sh  only_loc.sh  only_slam.sh  record_bag.sh  rviz2.sh  save_map.sh  zenoh-bridge.sh
stack_master/config/: sensors.yaml
stack_master/config/NUC2/: joy_teleop.yaml  vesc.yaml
stack_master/config/NUC2/slam/: f110_2d.lua  f110_2d_loc.lua
stack_master/launch/: base_system_launch.xml  mapping_launch.xml
stack_master/maps/gifu_univ_7th/: gifu_univ_7th.pbstream  gifu_univ_7th.pgm  gifu_univ_7th.yaml
state_estimation/config/: ekf.yaml
state_estimation/launch/: state_estimation_launch.xml
utilities/nodes/map_repeater/: CMakeLists.txt  package.xml
utilities/nodes/map_repeater/src/: map_repeater_node.cpp
visualizer/: package.xml  setup.py
visualizer/visualizer/: path_comparison_visualizer.py
